--- a/src/universal/conf/application.conf
+++ b/src/universal/conf/application.conf
@@ -1,3 +1,8 @@
+akka.http.server.idle-timeout = 5 s
+akka.http.client.idle-timeout = 5 s
+
+akka.http.server.request-timeout = 600 s
+
 helloworld {
   http {
     interface = "127.0.0.1"
